--- a/HealthApp/src/App.css
+++ b/HealthApp/src/App.css
@@ -1,12 +1,15 @@
-/* --- Navbar styling --- */
+/* --- Navbar NavLink Styling --- */
 .navbar .nav-link {
   color: var(--text-dark);
+  /* Transitions for hover effect */
   transition: color 0.3s ease, border-bottom 0.3s ease;
   padding-bottom: 0.6rem; 
   margin: 0 0.25rem; 
   border-bottom: 3px solid transparent; 
 }
 
+
+/* --- Navbar NavLink Hover --- */
 .navbar .nav-link:hover {
   color: var(--primary-color);
   border-bottom: 3px solid var(--primary-color);
